@@ -13,6 +13,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Fixed VDU5 font painting in black. It now honours the graphics window and
   the GCOL action code.
 - RECTANGLE FILL now honours the graphics window.
+- GOTO and GOSUB no longer require parentheses around an expression.
 
 * V1.22.1
 - Make the old BASIC I-IV compatible integer mathematics available via a
